--- a/public/views/mainpage/main-page.scss
+++ b/public/views/mainpage/main-page.scss
@@ -27,11 +27,26 @@
   border: 2px solid;
   padding: 20px;
   text-align: center;
-  margin-bottom: 15px;
+  margin-bottom: 12px;
   cursor: pointer;
 
 }
 
 .menu li:hover {
   color: white;
+}
+
+#logout {
+  margin: 4px;
+  background-color: #51ecec;
+  padding: 4px;
+  display: block;
+  text-align: center;
+  border-radius: 5px;
+  border: 2px solid black;
+}
+
+#logout:hover {
+  background-color: white;
+  cursor: pointer;
 }
